--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>SoundCloud Music Streaming Platform</title>    
+    <title>SoundCloud Music — стриминг</title>
+    <!-- Performance: preconnect to frequently used origins -->
+    <link rel="preconnect" href="https://api-v2.soundcloud.com" crossorigin />
+    <link rel="preconnect" href="https://cf-media.sndcdn.com" crossorigin />
+    <link rel="preconnect" href="https://i1.sndcdn.com" crossorigin />
     <!-- THIS IS THE START OF A COMMENT BLOCK, BLOCK TO BE DELETED: Google Fonts here, example:
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
